--- a/permutation/style.css
+++ b/permutation/style.css
@@ -1,4 +1,9 @@
-#title, #Explanation {
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.title,.explain {
     text-align: center;
 }
 
@@ -9,6 +14,21 @@
 .btn {
     height: 50px;
     width: 50px;
-    margin-left: -3px;
-    margin-right: -4px;
+
+    border: 1px black solid;
+    border-right: 0;
+
+    outline: none;
+}
+
+.btn:nth-last-child(1):not(.clicked) {
+    border-right: 1px black solid;
+}
+
+.btn:hover {
+    background-color: rgba(0,0,0,.1);
+}
+
+.clicked {
+    border: 4px red solid;
 }
