이미지 파일 제거

--- a/coin/style.css
+++ b/coin/style.css
@@ -1,3 +1,9 @@
 #title, #Explanation, #screen {
     text-align: center;
 }
+#image {
+    height: 20px;
+    width: 20px;
+    border: 1px black solid;
+    margin: 1px;
+}
