--- a/permutation/style.css
+++ b/permutation/style.css
@@ -13,7 +13,7 @@
 .title {
     position: absolute;
     width: 100%;
-    height: 56px;
+    height: 66px;
     left: 0;
     top: 0;
 
@@ -30,7 +30,7 @@
     width: 100%;
 
     color: white;
-    font-size: 20px;
+    font-size: 25px;
 
     margin-left: 15px;
 }
@@ -39,6 +39,12 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+
+    width: 90%;
+    margin: 0 auto;
+
+    height: 95vh;
+    overflow: hidden;
 }
 
 .intro {
@@ -50,6 +56,8 @@
     border-radius: 2px;
 
     margin: 20px auto 0;
+
+    font-size: 90%;
 }
 
 .quote-left {
@@ -75,8 +83,6 @@
 
     width: 100%;
     max-width: 600px;
-
-    flex: 1;
 
     box-shadow: 0px 0.5px 1.75px rgba(0, 0, 0, 0.039), 0px 1.85px 6.25px rgba(0, 0, 0, 0.19);
 }
