--- a/permutation/style.css
+++ b/permutation/style.css
@@ -5,6 +5,11 @@
     font-style: normal;
 }
 
+html, head, body {
+    margin: 0;
+    padding: 0;
+}
+
 * {
     font-family: 'IBM Plex Sans KR Medium', serif;
     color: black;
@@ -13,7 +18,7 @@
 .title {
     position: absolute;
     width: 100%;
-    height: 66px;
+    height: 112px;
     left: 0;
     top: 0;
 
@@ -30,20 +35,19 @@
     width: 100%;
 
     color: white;
-    font-size: 25px;
+    font-size: 36px;
 
-    margin-left: 15px;
+    margin-left: 25px;
 }
 
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-direction: column;
 
     width: 90%;
     margin: 0 auto;
 
-    height: 95vh;
     overflow: hidden;
 }
 
@@ -55,9 +59,11 @@
     padding-left: 20px;
     border-radius: 2px;
 
-    margin: 20px auto 0;
+    margin: 0px auto 0;
 
-    font-size: 90%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+    font-size: 30px;
 }
 
 .quote-left {
@@ -67,9 +73,10 @@
     top: 0;
     left: 0;
     bottom: 0;
-    width: 3px;
-    border-radius: 3px;
+    width: 5px;
+    border-radius: 5px;
     background: #00BCD4;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
     opacity: .2;
 }
@@ -82,7 +89,7 @@
     margin: 60px auto 0;
 
     width: 100%;
-    max-width: 600px;
+    max-width: 1000px;
 
     box-shadow: 0px 0.5px 1.75px rgba(0, 0, 0, 0.039), 0px 1.85px 6.25px rgba(0, 0, 0, 0.19);
 }
@@ -119,92 +126,122 @@
     font-weight: bold;
     color: #00BCD4;
 
-    font-size: 1.3vw;
+    font-size: 42px;
 }
 
-.info-key {
-    width: 47px;
-    height: 0;
-    border: 18px #00BCD4 solid;
-    border-radius: 18px;
-    background-color: #00BCD4;
-    opacity: .12;
-
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.bottom-info {
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 1000px;
+    margin: 20px auto 0;
+    width: 100%;
 }
 
-.info-value {
-    top: 0;
-    right: 0;
-    bottom: 0;
-
-    display: block;
-    content: '';
-
-    width: 0;
-    height: 0;
-
-    border: 18px #00BCD4 solid;
-    border-radius: 18px;
-    background-color: #00BCD4;
-    opacity: .24;
-
-    position: absolute;
+.circle-list {
+    display: flex;
+    flex: 1;
+    justify-content: flex-start;
 }
 
-.info-key-text {
-    display: inline;
-    font-size: 1px;
-
-    position: absolute;
-    top: 10px;
-    left: 12px;
-}
-
-.info-value-text {
-    display: inline;
-    font-size: 1px;
-
-    position: absolute;
-    top: 10px;
-    left: 59px;
-}
-
-/*.container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-.title,.explain {
-    text-align: center;
-}
-
-#permutation{
-    text-align: center;
-}
-
-.btn {
+.circle-bg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
     height: 50px;
+    border-radius: 50px;
+    background: rgba(0, 188, 212, .12);
+    margin-right: 10px;
+}
+
+.circle-text {
+    color: #00BCD4;
+    font-size: 14px;
+    flex: 1;
+    text-align: center;
+    margin-left: 4px;
+    font-weight: 600;
+}
+
+.circle-value-bg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 50px;
-
-    border: 1px black solid;
-    border-right: 0;
-
-    outline: none;
+    height: 50px;
+    border-radius: 50px;
+    background: rgba(0, 188, 212, .12);
 }
 
-.btn:nth-last-child(1):not(.clicked) {
-    border-right: 1px black solid;
+.circle-value-text {
+    color: #00BCD4;
+    font-size: 14px;
+    font-weight: 600;
 }
 
-.btn:hover {
-    background-color: rgba(0,0,0,.2);
+.submit-btn {
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    width: 130px;
+    justify-content: center;
+    border: 2px solid rgba(0, 0, 0, 0.12);
+    color: rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+    border-radius: 6px;
+    font-size: 20px;
 }
 
-.clicked {
-    border: 4px red solid;
-}*/
+@media (max-width: 950px) {
+    .title {
+        height: 60px;
+    }
+
+    .title-text {
+        font-size: 24px;
+        margin-left: 15px;
+    }
+
+    .container {
+        justify-content: flex-start;
+    }
+
+    .intro {
+        font-size: 18px;
+        filter: none;
+    }
+
+    .box {
+        padding-top: 20%;
+    }
+
+    .num {
+        font-size: 12px;
+    }
+
+    .circle-bg {
+        width: 80px;
+        height: 30px;
+        border-radius: 30px;
+    }
+
+    .circle-text,.circle-value-text {
+        font-size: 10px;
+    }
+
+    .circle-value-bg {
+        width: 30px;
+        height: 30px;
+        border-radius: 30px;
+    }
+
+    .submit-btn {
+        width: 80px;
+        font-size: 15px;
+    }
+
+    .active {
+        border-color: #00BCD4;
+        color: #00BCD4;
+    }
+}
