폰트 적용 오류 해결

--- a/permutation/style.css
+++ b/permutation/style.css
@@ -11,7 +11,7 @@ html, head, body {
 }
 
 * {
-    font-family: 'IBM Plex Sans KR Medium', serif;
+    font-family: 'IBMPlexSansKR-Regular', serif;
     color: black;
 }
 
